--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,14 @@
 </head>
 
 <body>
-	<div id="calc-wrap">
+	<div id="pomo-wrap">
 	</div>
 
 	<!-- Load React. -->
 	<!-- Note: when deploying, replace "development.js" with "production.min.js". -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.4.2/umd/react.development.js" crossorigin></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.4.2/umd/react-dom.development.js" crossorigin></script>
-	<script type="text/javascript" src="lib/index2.old.js"></script>
-	<!-- <script type="text/javascript" src="lib/index.js"></script> -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.4.2/umd/react-dom.development.js" crossorigin></script>	
+	<script type="text/javascript" src="lib/index.js"></script>
 </body>
 
 <footer>
