--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 
 <footer>
 	
-	<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+	<!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
 </footer>
 
 </html>
